部分自定义sdk新增module-info支持